--- a/style.css
+++ b/style.css
@@ -263,16 +263,61 @@ form .submit:hover {
     box-sizing: border-box
 }
 
-/* @media only screen and (min-width: 768px) {
+@media (min-width: 768px) {
     .intro {
         display: block;
         width: 100%;
-        padding-top: 100px;
+        height: 500px;
+        padding-top: 75px;
+        padding-bottom:0;
     }
     .photoleftdiv {
-        width: 100%;
-        margin: 0;
-        height: 60%;
+        min-width: 75%;
+        margin-top: 0;
+        margin-left: 85px;
+        margin-right: 75px;
+        height: 30%;
     }
-   
-  } */
+    .biorightdiv {
+        text-align: center;
+        min-width: 95%;
+        margin-top: 300px;
+    }
+    .card-img-top {
+        height: 200px;
+        
+    }
+}
+
+@media (min-width: 375px) {
+    .intro {
+        display: block;
+        width: 100%;
+        height: 300px;
+        padding-top: 75px;
+        font-size: 1rem;
+    }
+    .intro h1 {
+        font-size: 1rem;
+        line-height: 30px;
+        width: 100%;
+    }
+    .photoleftdiv {
+        min-width: 60%;
+        height: 30%;
+    }
+    .biorightdiv {
+        padding-left: 10px;
+        text-align: center;
+        min-width: 100%;
+        margin-top: 200px;
+    }
+    .biorightdiv p{
+        font-size: 12px;
+        line-height: 20px;
+    }
+    .card-img-top {
+        height: 200px;
+        
+    }
+}
